# SDRPlusPlus_CommunityEdition

./: .cursorrules  .gitignore  ADVANCED_THEME_README.md  CMakeLists.txt  MACOS_BUILD_INSTRUCTIONS.md  MPX_ANALYZER_README.md  README_TESTS.md  RELEASE_NOTES_v1.1.0-CE.md  RELEASE_NOTES_v1.2.2-CE.md  RELEASE_NOTES_v1.2.5-CE.md  SCANNER_ENHANCED_FEATURES.md  SCANNER_TECHNICAL_GUIDE.md  SCANNER_TRIGGER_LEVEL_FEATURE.md  SCANNER_USAGE_GUIDE.md  contributing.md  make_debian_package.sh  make_macos_bundle.sh  make_windows_package.ps1  readme.md  run_all_tests.sh  sdrpp.desktop  test_app_startup.sh  test_audio_sinks.sh  test_final_status.sh  test_final_verification.sh  test_functionality.sh  test_module_loading.sh  test_sink_registration.sh  test_symbol_export.sh
.cursor/rules/: run-tests.mdc
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_all.yml  cleanup_workflow_runs.yml  manual_release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: MainActivity.kt
ci_tests/: README.md  run_all_tests.sh  test_android_build.sh  test_linux_build.sh  test_macos_build.sh  test_windows_build.ps1
core/: CMakeLists.txt
core/backends/android/: backend.cpp
core/backends/glfw/: backend.cpp
core/libcorrect/: CMakeLists.txt
core/src/: core.cpp  credits.cpp  version.h
core/src/dsp/buffer/: reshaper.h
core/src/dsp/demod/: broadcast_fm.h
core/src/dsp/multirate/decim/taps/: fir_1024_64.h  fir_128_16.h  fir_16_8.h  fir_2048_64.h  fir_256_32.h  fir_2_2.h  fir_32_8.h  fir_4096_64.h  fir_4_2.h  fir_512_32.h  fir_64_8.h  fir_8192_128.h  fir_8_4.h
core/src/gui/: icons.cpp  main_window.cpp  main_window.h  style.cpp  style.h  theme_manager.cpp
core/src/gui/dialogs/: credits.cpp  loading_screen.cpp
core/src/gui/menus/: display.cpp  display.h  theme.cpp
core/src/gui/widgets/: advanced_widgets.h  precision_slider.h  waterfall.cpp  waterfall.h
core/src/signal_path/: source.cpp  source.h
decoder_modules/m17_decoder/: CMakeLists.txt
decoder_modules/pager_decoder/src/: decoder.h  main.cpp
decoder_modules/pager_decoder/src/pocsag/: decoder.h
decoder_modules/radio/: CMakeLists.txt
decoder_modules/radio/src/: radio_interface.h  radio_module.h
decoder_modules/radio/src/demodulators/: wfm.h
docker_builds/debian_bookworm/: do_build.sh
docker_builds/debian_trixie/: do_build.sh
docker_builds/ubuntu_bionic/: do_build.sh
docker_builds/ubuntu_jammy/: do_build.sh
docker_builds/ubuntu_noble/: do_build.sh
docs/: SQUELCH_DELTA_FEATURE.md  SQUELCH_DELTA_USER_MANUAL.md
docs/architecture/: 01_core_architecture.md  01a_core_internals.md  01b_backend_architecture.md  02_module_system.md  02a_module_internals.md  03_signal_path_dsp.md  03a_dsp_internals.md  04_ui_system.md  04a_ui_internals.md
macos/: bundle_utils.sh
misc_modules/discord_integration/discord-rpc/: CMakeLists.txt
misc_modules/frequency_manager/src/: main.cpp
misc_modules/recorder/src/: main.cpp  recorder_interface.h
misc_modules/scanner/: CMakeLists.txt  Logger.cpp  Logger.hpp
misc_modules/scanner/src/: main.cpp  scanner_log.h
misc_modules/spiritbox_emulator/: CMakeLists.txt
misc_modules/spiritbox_emulator/src/: main.cpp
root/: config.json
root/res/bandplans/: portugal.json  spain.json
root/res/themes/: advanced.json
source_modules/airspy_source/src/: main.cpp
source_modules/airspyhf_source/src/: main.cpp
source_modules/audio_source/src/: main.cpp
source_modules/file_source/src/: main.cpp
source_modules/hackrf_source/src/: main.cpp
source_modules/hermes_source/src/: main.cpp
source_modules/hydrasdr_source/: CMakeLists.txt
source_modules/hydrasdr_source/src/: main.cpp
source_modules/network_source/src/: main.cpp
source_modules/plutosdr_source/: CMakeLists.txt
source_modules/plutosdr_source/src/: main.cpp
source_modules/rfspace_source/src/: main.cpp
source_modules/rtl_sdr_source/src/: main.cpp
source_modules/rtl_tcp_source/src/: main.cpp
source_modules/sdrpp_server_source/src/: main.cpp
source_modules/spectran_http_source/src/: main.cpp
source_modules/spyserver_source/src/: main.cpp  spyserver_client.cpp
win32/: resources.rc
